[package]
name = "temper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.42"
dotenv = "0.15.0"
futures = "0.3.31"
hyper = "1.7.0"
# influxdb2 = "0.5.2"
influxdb2 = { version = "0.5.2", default-features = false, features = ["rustls", "gzip"] }

# openssl = { version = "0.10.73", features = ["vendored"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
